Updates since first upload to github

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <h1>Movie Quiz</h1>
     </header>
     <section role="contentinfo" id="trackCounter">
-        <span class="counter">Question 1 of 5</span>
-        <span class="counter">0 of 5 Correct</span>
+        <span class="counter js-counter">Question 1 of 5</span>
+        <span class="counter js-right">0 of 5 Correct</span>
     </section>
     </header>
     <main role="main">
@@ -35,120 +35,32 @@
             </div>
         </section>
         <!-- Main part of the webpage, where questions are shown -->
-        <form id="questionsForm">
-            <fieldset class="field1 hidden">
-                <legend>What is the name of the hobbit played by Elijah Wood in the Lord of the Rings movies?</legend>
+        <form id="questionsForm" class="">
+            <fieldset class="field1 ">
+                <legend class="js-question">Question</legend>
                 <div id="questionCont">
                     <div>
                         <input type="radio" name="answer" class="answer 1" value="firstAnswer">
-                        <label for="firstAnswer">Legolas</label>
+                        <label class="js-answer1" for="firstAnswer">Answer1</label>
                     </div>
                     <div>
                         <input type="radio" name="answer" class="answer 2" value="secondAnswer">
-                        <label for="firstAnswer">Frodo Baggins</label>
+                        <label class="js-answer2" for="firstAnswer">Answer2</label>
                     </div>
                     <div>
                         <input type="radio" name="answer" class="answer 3" value="thirdAnswer">
-                        <label for="firstAnswer">Gandalf</label>
+                        <label class="js-answer3" for="firstAnswer">Answer3</label>
                     </div>
                     <div>
                         <input type="radio" name="answer" class="answer 4" value="fourthAnswer">
-                        <label for="firstAnswer">Samwise Gamgee</label>
-                    </div>
-                    <button type="submit" name="submit" class="button">Submit</button>
-                </div>
-            </fieldset>
-            <fieldset class="field2 hidden">
-                <legend>Which classic thriller movie stars Roy Schieder as the police chief Martin Brody?</legend>
-                <div id="questionCont">
-                    <div>
-                        <input type="radio" name="answer" class="answer 1" value="firstAnswer">
-                        <label for="firstAnswer">Marathon Man</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 2" value="secondAnswer">
-                        <label for="firstAnswer">Blue Thunder</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 3" value="thirdAnswer">
-                        <label for="firstAnswer">Sorcerer</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 4" value="fourthAnswer">
-                        <label for="firstAnswer">Jaws</label>
-                    </div>
-                    <button type="submit" name="submit" class="button">Submit</button>
-                </div>
-            </fieldset>
-            <fieldset class="field3 hidden">
-                <legend>Which Tom Hanks movie won the Academy Award for Best Picture in 1994?</legend>
-                <div id="questionCont">
-                    <div>
-                        <input type="radio" name="answer" class="answer 1" value="firstAnswer">
-                        <label for="firstAnswer">Cast Away</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 2" value="secondAnswer">
-                        <label for="firstAnswer">Philadelphia</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 3" value="thirdAnswer">
-                        <label for="firstAnswer">Forrest Gump</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 4" value="fourthAnswer">
-                        <label for="firstAnswer">Apollo 13</label>
-                    </div>
-                    <button type="submit" name="submit" class="button">Submit</button>
-                </div>
-            </fieldset>
-            <fieldset class="field4 hidden">
-                <legend>Who directed the epic historical drama Schindler's List in 1993?</legend>
-                <div id="questionCont">
-                    <div>
-                        <input type="radio" name="answer" class="answer 1" value="firstAnswer">
-                        <label for="firstAnswer">Steven Spielberg</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 2" value="secondAnswer">
-                        <label for="firstAnswer">Martin Scorsese</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 3" value="thirdAnswer">
-                        <label for="firstAnswer">James Camron</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 4" value="fourthAnswer">
-                        <label for="firstAnswer">Christopher Nolan</label>
-                    </div>
-                    <button type="submit" name="submit" class="button">Submit</button>
-                </div>
-            </fieldset>
-            <fieldset class="field5 hidden">
-                <legend>What is the highest grossing movie of all time?</legend>
-                <div id="questionCont">
-                    <div>
-                        <input type="radio" name="answer" class="answer 1" value="firstAnswer">
-                        <label for="firstAnswer">A: Avenger's EndGame</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 2" value="secondAnswer">
-                        <label for="firstAnswer">B: Avatar</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 3" value="thirdAnswer">
-                        <label for="firstAnswer">C: Titanic</label>
-                    </div>
-                    <div>
-                        <input type="radio" name="answer" class="answer 4" value="fourthAnswer">
-                        <label for="firstAnswer">D: Jurassic World</label>
+                        <label class="js-answer4" for="firstAnswer">Answer4</label>
                     </div>
                     <button type="submit" name="submit" class="button">Submit</button>
                 </div>
             </fieldset>
         </form>
         <!-- Displayed if user gets questions wrong -->
-        <section role="contentinfo" class="hidden">
+        <section role="contentinfo" id="wrong" class="hidden">
             <div class="container wrongAnswer">
                 <h2>Sorry, that was the wrong answer</h2>
                 <p>The right answer was <strong>"A: Avenger's Endgame"</strong>
@@ -160,7 +72,7 @@
         <section role="contentinfo" id="right" class="hidden">
             <div class="container rightAnswer">
                 <h2>That is Correct!</h2>
-                <button type="button" name="next" class="button">Next</button>
+                <button type="button" name="next" class="button right">Next</button>
             </div>
         </section>
         <!-- Displayed at the end of the quiz -->
